# deepssh

./: .gitignore  CURRENT_STATUS.md  NEXT_STEPS.md  PUSH_TO_GITHUB.md  QUICK_FIX_GUIDE.md  README.md  ROOT_CAUSE_INVESTIGATION.md  SCROLLING_FIX.patch  SCROLLING_FIX_SUMMARY.md  SUMMARY.md  TESTING_GUIDE.md  VERIFICATION_GUIDE.md  build.bat  build.ps1  build.sh  flutter_rust_bridge.yaml  prepare_commit.sh  pubspec.yaml  setup_and_push.sh  verify_fix.sh
.github/: ACTIONS_OPTIMIZATION.md
.github/workflows/: package.yml
docs/: ALTERNATE_BUFFER_FIX.md  CLAUDE_CODE_FIX.md  ROOT_CAUSE_CONFIRMED.md  SCROLLING_ISSUE_ANALYSIS.md  VERIFICATION_FINAL.md  VISUAL_FIX_GUIDE.md  claude_scroll_debug.txt  compare_scroll_debug.txt  scroll_debug.txt
docs/superpowers/plans/: 2026-04-29-drag-reorder-tabs-explorer.md
docs/superpowers/specs/: 2026-04-26-terminal-copy-paste-design.md
lib/: main.dart
lib/core/: version_info.dart
lib/core/logging/: app_logger.dart  frontend_error_hooks.dart
lib/core/models/: host_item.dart  local_terminal_item.dart  ssh_profile_item.dart  ssh_session_item.dart  (+3 more)
lib/workbench/: workbench_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: AppDelegate.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: app_log.rs  config_path.rs  frb_generated.rs  lib.rs  local_terminal.rs  mem_metrics.rs  profile.rs  ssh_auth.rs  ssh_session.rs  theme.rs  tunnel.rs
test/: macos_release_entitlements_test.dart  widget_test.dart  windows_runner_min_size_test.dart  workbench_local_terminal_test.dart
test/diagnostics/: dart_metrics_test.dart  diagnostics_page_test.dart  flutter_metrics_test.dart  memory_logger_test.dart
test/workbench/: add_connection_test.dart  workbench_logging_test.dart  workbench_page_reorder_test.dart  workbench_page_ssh_test.dart  workbench_page_test.dart  workbench_page_tunnel_test.dart  workbench_theme_persistence_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  win32_window.cpp
(+66 files in other folders)
