[package]
name = "deepssh_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
flutter_rust_bridge = "=2.12.0"
once_cell = "1"
pkcs5 = "=0.8.0-rc.13"
russh = { version = "0.60.1", default-features = false, features = ["ring", "rsa"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
