[package]
name = "deepssh_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
flutter_rust_bridge = "=2.12.0"
libmimalloc-sys = { version = "0.1", features = ["extended"] }
mimalloc = "0.1"
once_cell = "1"
pkcs5 = "=0.8.0-rc.13"
portable-pty = "0.8"
russh = { version = "0.60.1", default-features = false, features = ["ring", "rsa"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Pulling only the features we actually use keeps the runtime smaller at boot:
# rt-multi-thread (Builder/Runtime), io-util (AsyncReadExt/WriteExt),
# sync (mpsc/oneshot), net (TcpListener/Stream), time (timeout/sleep),
# macros (select!). Avoids "full" which drags in signal/process/fs/etc.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "io-util",
    "sync",
    "net",
    "time",
    "macros",
] }
uuid = { version = "1", features = ["v4"] }

# Windows-only: needed to call EmptyWorkingSet after the drain hook so the OS
# actually returns physical pages we already decommitted via mimalloc, instead
# of keeping them mapped in the working set until memory pressure hits.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
